added styling to elements

--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <html>
     <head>
-        <link href="./css/style.css">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="top-bar">
-            <div class="float-left">
-                <a href="www.blah.com/about">About</a>
-                <a href="www.blah.com/store">Store</a>
-            </div>
-            <div class="float-right">
-                <a href="www.blah.com/mail">Gmail</a>
-                <a href="www.blah.com/Images">Images</a>
-                <a href="www.blah.com/account">M</a>
-            </div>
+        <div class="top-bars">
+            <span class="float-left">
+                <a class="pad-left" href="www.blah.com/about">About</a>
+                <a class="pad-left" href="www.blah.com/store">Store</a>
+            </span>
+            <span class="float-right">
+                <a class="pad-right" href="www.blah.com/mail">Gmail</a>
+                <a class="pad-right" href="www.blah.com/Images">Images</a>
+                <span class="account margin-right">
+                    <a class="account" href="www.blah.com/account">M</a>
+                </span>
+            </span>
         </div>
         <div class="center-bar">
-            <h2>Google</h2>
+            <img class="center" src="./images/download.png" alt="Google Logo" height="100px" width="300px">
             <div class="search-bar">
-                <img src="./images/find-512.png" height="15px" width="15px" alt="Search Icon">
-                <img src="./images/Multimedia_communication_flat_mobile_Technology-08-18-512.png"
-                height="15px" width="15px" alt="Voice Assist Microphone">
+                <img src="./images/find-512.png" height="20px" width="20px" alt="Search Icon">
+                <img class="float-right" src="./images/Multimedia_communication_flat_mobile_Technology-08-18-512.png"
+                height="20px" width="20px" alt="Voice Assist Microphone">
             </div>
-            <div>
+            <div class="align-center">
                 <button>Search</button>
                 <button>I'm feeling lucky</button>
             </div>
         </div>
         <div class="bottom-bar">
-            <div class="float-left">
-                <a href="www.blah.com/Advertising">Advertising</a>
-                <a href="www.blah.com/business">Business</a>
-                <a href="www.blah.com/how-search-works">How Search Works</a>
-            </div>/
-            <div class="float-right">
-                <a href="www.blah.com/privacy">Privacy</a>
-                <a href="www.blah.com/terms">Terms</a>
-                <a href="www.blah.com/settings">Settings</a>
-            </div>
+            <span class="float-left">
+                <a class="pad-left" href="www.blah.com/Advertising">Advertising</a>
+                <a class="pad-left" href="www.blah.com/business">Business</a>
+                <a class="pad-left" href="www.blah.com/how-search-works">How Search Works</a>
+            </span>
+            <span class="float-right">
+                <a class="pad-right" href="www.blah.com/privacy">Privacy</a>
+                <a class="pad-right" href="www.blah.com/terms">Terms</a>
+                <a class="pad-right" href="www.blah.com/settings">Settings</a>
+            </span>
         </div>
     </body>
 </html>
